--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cloud_firestore: ^4.4.5
   image_picker: ^0.8.7
   cached_network_image: ^3.2.3
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
