--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,28 +35,28 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  velocity_x: ^3.6.0
+  velocity_x: ^4.2.1
   get: ^4.6.5
-  firebase_core: ^2.8.0
-  firebase_auth: ^4.3.0
-  firebase_storage: ^11.0.16
-  cloud_firestore: ^4.4.5
-  image_picker: ^0.8.7
+  firebase_core: ^3.1.0
+  firebase_auth: ^5.1.0
+  firebase_storage: ^12.0.1
+  cloud_firestore: ^5.0.1
+  image_picker: ^1.1.2
   cached_network_image: ^3.2.3
-  internet_connection_checker: ^1.0.0+1
-  intl: ^0.17.0
+  internet_connection_checker: ^2.0.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.12.0
+  flutter_launcher_icons: ^0.13.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
